fix z-index in value filter by

--- a/src/assets/scss/_inputs.scss
+++ b/src/assets/scss/_inputs.scss
@@ -231,7 +231,7 @@
 		}
 	}
 	&__list{
-		z-index: 1;
+		z-index: 2;
 		position: absolute;
 		left: 0;
 		right: 0;
